<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_rides"
            android:title="@string/rides"
            android:icon="@drawable/ic_rides" />
        <item
            android:id="@+id/nav_cars"
            android:title="@string/cars"
            android:icon="@drawable/ic_car" />
        <item
            android:id="@+id/nav_drivers"
            android:title="@string/drivers"
            android:icon="@drawable/ic_drivers" />
        <item
            android:id="@+id/nav_vip_guests"
            android:title="@string/vip_guests"
            android:icon="@drawable/ic_vip_guests" />
        <item
            android:id="@+id/nav_chat"
            android:title="@string/chat"
            android:icon="@drawable/ic_chat" />
        <item
            android:id="@+id/nav_locations"
            android:title="@string/locations"
            android:icon="@drawable/ic_locations" />
        <item
            android:id="@+id/nav_admins"
            android:title="@string/administrators"
            android:icon="@drawable/ic_admins" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:icon="@drawable/ic_logout" />
    </group>
</menu>